<resources>
    <string name="app_name">AplikasiSederhana</string>
    <string name="androids_name">Nama Android</string>
    <string name="description">Deskripsi</string>
    <string name="release_date">Tanggal rilis</string>
    <string name="profile">Profile</string>
    <string name="about_name">Muhammad Bimo Habib Al-Farrabi</string>
    <string name="about_email">bimoalfarrabi24@gmail.com</string>
    <string name="title_activity_splash">Splash</string>
    <string name="btn_share">Share</string>
    <string name="tv_item_source">Sumber: Wikipedia</string>
    <string-array name="data_name">
        <item>Cupcake</item>
        <item>Donut</item>
        <item>Eclair</item>
        <item>Froyo</item>
        <item>Gingerbread</item>
        <item>Honeycomb</item>
        <item>Ice Cream Sandwich</item>
        <item>Jelly Bean</item>
        <item>KitKat</item>
        <item>Lollipop</item>
        <item>Marshmallow</item>
        <item>Nougat</item>
        <item>Oreo</item>
        <item>Pie</item>
        <item>Quince Tart</item>
        <item>Red Velvet Cake</item>
        <item>Snow Cone</item>
        <item>Tiramisu</item>
    </string-array>
</resources>